# ockam

implementations/c/: CMakeLists.txt  ockam-config.cmake
implementations/c/cmake/: ockam_copts.cmake
implementations/c/documentation/examples/: .clang-format  CMakeLists.txt
implementations/c/documentation/examples/basic/: CMakeLists.txt  example.c
implementations/c/documentation/examples/vault/aead_aes_128_gcm/: CMakeLists.txt  main.c
implementations/c/documentation/examples/vault/initialize/default/: CMakeLists.txt  main.c
implementations/c/documentation/examples/vault/random/: CMakeLists.txt  main.c
implementations/c/documentation/examples/vault/sha256/: CMakeLists.txt  main.c
implementations/c/include/ockam/: key_agreement.h  queue.h
implementations/c/lib/: CMakeLists.txt
implementations/c/lib/channel/tests/: initiator.c
implementations/c/lib/codec/: route.c
implementations/c/lib/codec/tests/: codec.c
implementations/c/lib/key_agreement/: key_agreement_impl.h
implementations/c/lib/key_agreement/xx/: xx_common.c  xx_initiator.c  xx_local.h  xx_responder.c
implementations/c/lib/key_agreement/xx/tests/: xx_test.c  xx_test_initiator.c  xx_test_responder.c
implementations/c/lib/ockam/vault/atecc508a/: CMakeLists.txt  atecc508a.c
implementations/c/lib/ockam/vault/atecc508a/tests/: CMakeLists.txt  test_atecc508a.c
implementations/c/lib/ockam/vault/atecc608a/: CMakeLists.txt  atecc608a.c
implementations/c/lib/ockam/vault/default/: default.c
implementations/c/lib/queue/tests/: queue_test.c
(+19 files in other folders)
